[metadata]
name=ocoen_filesecrets
version=0.3.0
description=Module for storing an arbitary encrypted blob in password protected file.
long_description=file: README.md
license=MIT
url=https://github.com/orthanc/ocoen_filesecrets
author=Ed Costello
author_email=ocoen@orthanc.co.nz

[options]
packages=find:
package_dir=
    =src
include_package_data=True
zip_safe=True
install_requires=
    pycryptodome

[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    fs-encrypt=ocoen.filesecrets.cli:encrypt
    fs-decrypt=ocoen.filesecrets.cli:decrypt
    fs-rekey=ocoen.filesecrets.cli:rekey
